CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (TARGET_NAME tsbuf)
PROJECT(${TARGET_NAME})

MESSAGE(STATUS "==================================")
MESSAGE(STATUS "Start:${TARGET_NAME}")

ADD_DEFINITIONS(-std=c++11)
FIND_PACKAGE( OpenCV REQUIRED )

INCLUDE_DIRECTORIES(
    ${OpenCV_INCLUDE_DIRS}
    )

ADD_EXECUTABLE(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

TARGET_LINK_LIBRARIES(${TARGET_NAME}
    ${OpenCV_LIBS}
    )

# ---[ Output path
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})